<resources>
  <string name="ta_tab_flights">Flights</string>
  <string name="ta_tab_hotels">Hotels</string>
  <string name="ta_tab_other">Other</string>
  <string name="ta_tab_info">Information</string>
  <string name="ta_done">Done</string>
  <string name="ta_understand">Got it</string>
  <string name="ta_zero_data_error_title">Something went wrong…</string>
  <string name="ta_zero_data_error_subtitle">Please try again or try later</string>
  <string name="ta_zero_data_error_try_again">Try again</string>
  <string name="ta_zero_data_retry_search">Search again</string>
  <string name="ta_zero_data_no_internet_title">No connection</string>
  <string name="ta_zero_data_no_internet_subtitle">Check your network settings and try again</string>
  <string name="ta_zero_data_survey_title">Thank you for your feedback</string>
  <string name="ta_default_zero_data_title">Nothing found</string>
  <string name="ta_default_zero_data_subtitle">Try changing your search parameters</string>
  <string name="ta_hotels_search_not_available_title">Hotel reservations are\nnot supported in your region</string>
  <string name="ta_price_display_flight_all">Prices for all passengers</string>
  <string name="ta_price_display_flight_single">Prices per 1 passenger</string>
  <string name="ta_currency_USD">US dollar</string>
  <string name="ta_currency_EUR">Euro</string>
  <string name="ta_currency_RUB">Russian ruble</string>
  <string name="ta_economy">Economy</string>
  <string name="ta_business">Business</string>
  <string name="ta_first_class">First class</string>
  <string name="ta_guest">Guesthouse</string>
  <string name="ta_hotel">Hotel</string>
  <string name="ta_hostel">Hostel</string>
  <string name="ta_apartment">Apartment</string>
  <string name="ta_villa">Villa</string>
  <string name="ta_aparthotel">Apart-hotel</string>
  <string name="ta_motel">Motel</string>
  <string name="ta_resort">Resort hotel</string>
  <string name="ta_lodge">Lodge</string>
  <string name="ta_bb">B\u0026B</string>
  <string name="ta_guests">Guesthouses</string>
  <string name="ta_hotels">Hotels</string>
  <string name="ta_hostels">Hostels</string>
  <string name="ta_apartments">Apartments</string>
  <string name="ta_villas">Villas</string>
  <string name="ta_aparthotels">Apart-hotels</string>
  <string name="ta_motels">Motels</string>
  <string name="ta_resorts">Resort hotels</string>
  <string name="ta_lodges">Lodges</string>
  <string name="ta_bbs">B\u0026B</string>
  <string name="ta_appbar_title">%1$s – %2$s</string>
  <string name="ta_appbar_subtitle">%1$s, %2$s</string>
  <string name="ta_filters_button_text">Filters</string>
  <string name="ta_chart_button_text">Price chart</string>
  <string name="ta_hotels_appbar_subtitle">%1$s %2$s</string>
  <string name="ta_on_map_button_text">Show on map</string>
  <string name="ta_list_button_text">List</string>
  <string name="ta_age_zero">under 1 y.o.</string>
  <plurals name="ta_passengers_count">
    <item quantity="one">%s passenger</item>
    <item quantity="other">%s passengers</item>
  </plurals>
  <plurals name="ta_adults_count">
    <item quantity="one">%s adult</item>
    <item quantity="other">%s adults</item>
  </plurals>
  <plurals name="ta_children_count">
    <item quantity="one">%s child</item>
    <item quantity="other">%s children</item>
  </plurals>
  <plurals name="ta_age_count">
    <item quantity="one">%s y.o.</item>
    <item quantity="other">%s y.o.</item>
  </plurals>
  <plurals name="ta_nights_count">
    <item quantity="one">(%s night)</item>
    <item quantity="other">(%s nights)</item>
  </plurals>
  <string name="ta_search_title">Search cheap flight tickets</string>
  <string name="ta_search_departure">From</string>
  <string name="ta_search_arrival">To</string>
  <string name="ta_search_departure_date">Departure</string>
  <string name="ta_search_arrival_date">Return</string>
  <string name="ta_search_button">Search</string>
  <string name="ta_search_dates">%1$s – %2$s</string>
  <string name="ta_calendar_title">Dates</string>
  <string name="ta_calendar_departure_date">Departure</string>
  <string name="ta_calendar_select_btn_one_date">Select %1$s</string>
  <string name="ta_calendar_select_btn_two_dates">Select %1$s – %2$s</string>
  <string name="ta_calendar_select_btn_empty">Select</string>
  <string name="ta_passengers_info_text">%1$s, %2$s</string>
  <string name="ta_price_info_text">from %1$s</string>
  <string name="ta_passengers_title">Passengers</string>
  <string name="ta_passengers_flight_type_title">Class</string>
  <string name="ta_passengers_adults">Adults</string>
  <string name="ta_passengers_adults_description">Over 12 y.o.</string>
  <string name="ta_passengers_children">Children</string>
  <string name="ta_passengers_children_description">2-12 years old</string>
  <string name="ta_passengers_babies">Infants</string>
  <string name="ta_passengers_babies_description">0-2 y.o., on lap</string>
  <string name="ta_search_hint">City, country, or airport</string>
  <string name="ta_search_near_arports_title">Nearest airports</string>
  <string name="ta_search_was_searched_title">Recent searches</string>
  <string name="ta_search_airports_item_name">%1$s, %2$s</string>
  <string name="ta_search_result_straight_flight_title">Direct flights</string>
  <string name="ta_search_result_straight_flight_show_more">Show all</string>
  <string name="ta_search_result_straight_flight_show_less">Show less</string>
  <string name="ta_ticket_card_more">Show details</string>
  <string name="ta_ticket_card_selected">Selected</string>
  <string name="ta_ticket_card_same_price">Same price</string>
  <string name="ta_ticket_card_not_available">Unavailable</string>
  <string name="ta_ticket_card_not_available_dialog_title">We\'ll select a different flight %s</string>
  <string name="ta_ticket_card_not_available_dialog_subtitle">This flight combination isn\'t available. Try looking for other flights %s</string>
  <string name="ta_ticket_card_not_available_dialog_positive">Got it</string>
  <string name="ta_ticket_card_not_available_dialog_negative">Close</string>
  <string name="ta_filters_title">Filters</string>
  <string name="ta_filters_reset">Reset</string>
  <string name="ta_sorting_title">Sort by</string>
  <string name="ta_transfer_title">Layovers</string>
  <string name="ta_transfer_count">Number of layovers</string>
  <string name="ta_transfer_time">Duration</string>
  <string name="ta_transfer_time_title">Layover duration</string>
  <string name="ta_transfer_time_default">up to 22h 55m</string>
  <string name="ta_transfer_airports">Connecting airports</string>
  <string name="ta_no_airports_change_title">No airport changes</string>
  <string name="ta_no_night_transfer_title">No overnight layovers</string>
  <string name="ta_depart_title">Outbound flight %1$s</string>
  <string name="ta_return_title">Return flight %1$s</string>
  <string name="ta_depart_time_title">Departure</string>
  <string name="ta_depart_time_default">00:00 – 23:55</string>
  <string name="ta_return_time_title">Arrival</string>
  <string name="ta_time_morning">Morning</string>
  <string name="ta_time_noon">Afternoon</string>
  <string name="ta_time_evening">Evening</string>
  <string name="ta_luggage_title">Included in the ticket</string>
  <string name="ta_luggage">Only including baggage</string>
  <string name="ta_other_title">More options</string>
  <string name="ta_flight_time_title">Travel time</string>
  <string name="ta_price_title">Price</string>
  <string name="ta_airports_title">Airports</string>
  <string name="ta_airlines_title">Airlines</string>
  <string name="ta_agencies_title">Agencies</string>
  <string name="ta_filters_all">All</string>
  <string name="ta_filters_no_transfer">Direct</string>
  <string name="ta_filter_one_transfer">One or fewer</string>
  <string name="ta_filter_transfer_count">Up to %d</string>
  <string name="ta_filters_transfer_duration_minutes">from %1$sh %2$sm</string>
  <string name="ta_filters_transfer_duration_hours_only">from %1$sh</string>
  <string name="ta_filters_time_minutes">up to %1$sh %2$sm</string>
  <string name="ta_filters_time_hours_only">up to %1$sh</string>
  <string name="ta_filters_price_from">up to %s</string>
  <string name="ta_filters_selection_count">Selected: %s</string>
  <string name="ta_filters_apply">Show</string>
  <string name="ta_flight_time_full">%1$sh %2$sm</string>
  <string name="ta_flight_time_hours_only">%1$sh</string>
  <string name="ta_flight_time_minutes_only">%1$sm</string>
  <string name="ta_transfer_duration_full">%1$sh %2$sm</string>
  <string name="ta_transfer_duration_hours_only">%1$sh</string>
  <string name="ta_transfer_duration_minutes_only">%1$sm</string>
  <string name="ta_transfer_duration">%1$s %2$s</string>
  <string name="ta_no_transfer">Direct</string>
  <string name="ta_search_results_zero_data_title">No flights found</string>
  <string name="ta_search_results_zero_data_subtitle">Tweak your search parameters and try again</string>
  <string name="ta_search_results_popop_title">Search results may be outdated</string>
  <string name="ta_search_results_popop_subtitle">Refresh your search to view exact prices and apply filters. Ticket prices change around 10 times a day.</string>
  <string name="ta_search_results_popop_negative">Later</string>
  <string name="ta_search_results_popop_positive">Update search</string>
  <string name="ta_search_results_last_Item_text">You\'ve viewed all the tickets matching your search parameters. Edit your filters for new search results</string>
  <string name="ta_search_results_visa_rules">layover with visa</string>
  <string name="ta_search_results_recheck_baggage">interline booking</string>
  <string name="ta_search_results_night_transfer">overnight layover</string>
  <string name="ta_search_results_airport_change">airport change</string>
  <string name="ta_search_results_short_layover">short layover</string>
  <plurals name="ta_cheapest_transfer_count">
    <item quantity="one">%s layover, but it\'s cheaper</item>
    <item quantity="other">%s layovers, but it\'s cheaper</item>
  </plurals>
  <plurals name="ta_filters_count">
    <item quantity="one">Show %s ticket</item>
    <item quantity="other">Show %s tickets</item>
  </plurals>
  <plurals name="ta_search_results_seats_available">
    <item quantity="one">%s ticket remaining at this price</item>
    <item quantity="other">%s tickets remaining at this price</item>
  </plurals>
  <string name="ta_price_chart_depart_to">Outbound flight %s</string>
  <string name="ta_price_chart_return_to">Return flight %s</string>
  <string name="ta_price_chart_to_city">to %s</string>
  <string name="ta_price_chart_price_from">from %s</string>
  <string name="ta_price_chart_direct_flights_only">Direct flights only</string>
  <string name="ta_price_chart_with_luggage">Baggage included</string>
  <string name="ta_price_chart_find_from">Search flights starting from %s</string>
  <string name="ta_price_chart_find_no_price">Search flights</string>
  <string name="ta_price_chart_no_price">Price not available</string>
  <plurals name="ta_days_count">
    <item quantity="one">%s day</item>
    <item quantity="other">%s days</item>
  </plurals>
  <string name="ta_sorting_filters_title">Sort by</string>
  <string name="ta_sorting_filters_recommend">Recommended</string>
  <string name="ta_sorting_filters_price">Price</string>
  <string name="ta_sorting_filters_depart">Departure time</string>
  <string name="ta_sorting_filters_return">Arrival time</string>
  <string name="ta_sorting_filters_transfer_time">Layover duration</string>
  <string name="ta_sorting_filters_flight_time">Travel time</string>
  <string name="ta_sorting_filters_rating">Rating</string>
  <string name="ta_hotels_search_title">Search unforgettable hotels</string>
  <string name="ta_hotels_search_city_or_hotel">City or hotel</string>
  <string name="ta_hotels_search_button">Search</string>
</resources>