<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/ta_primary"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                style="@style/TravelApp.HeadlineLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ta_search_title"
                android:textColor="?attr/ta_homeScreenText"
                app:layout_constraintBottom_toTopOf="@id/inputsView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/inputsView"
                style="@style/TravelApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.travelapp.sdk.internal.ui.views.TaMainInputView
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        app:ta_drawable_tint="?attr/ta_onSurfaceSecondary"
                        app:ta_hint="@string/ta_search_departure"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.travelapp.sdk.internal.ui.views.TaMainInputView
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        app:ta_drawable_tint="?attr/ta_onSurfaceSecondary"
                        app:ta_hint="@string/ta_search_arrival"
                        app:layout_constraintTop_toBottomOf="@id/from" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/swap"
                        style="@style/TravelApp.RoundIconButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="16dp"
                        app:rippleColor="@android:color/transparent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/to"
                        app:layout_constraintEnd_toEndOf="@id/from"
                        app:layout_constraintTop_toTopOf="@id/from" />

                    <com.travelapp.sdk.internal.ui.views.TaMainInputView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        app:ta_drawable_tint="?attr/ta_onSurfaceSecondary"
                        app:ta_hint="@string/ta_search_departure_date"
                        app:layout_constraintTop_toBottomOf="@id/to" />

                    <com.travelapp.sdk.internal.ui.views.TaMainInputView
                        android:id="@+id/passengers"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        app:ta_drawable_tint="?attr/ta_onSurfaceSecondary"
                        app:layout_constraintTop_toBottomOf="@id/date" />

                    <com.travelapp.sdk.internal.ui.views.TAButton
                        android:id="@+id/searchButton"
                        style="@style/TravelApp.FilledButton"
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/ta_search_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passengers"
                        tools:layout_editor_absoluteX="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>